--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "html2canvas": "^1.4.1",
     "joi": "^17.13.3",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
